--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
       <div class="main">
         <nav>
-            <span><img width="53" src="assets/img/logo.svg" alt=""></span>
+            <span><img width="53" src="assets\img\logo.svg" alt=""></span>
             <div>
                 <button>English</button>
                 <button>Sign In</button>
